# autoutils

./: CMakeLists.txt  CheckFunc.cmake  LICENSE  README.md  WriteToConfigHeader.cmake  autoutils-config.cmake.in
cmake/: AutoutilsCheckDecl.cmake  AutoutilsCheckFunc.cmake  AutoutilsCheckHeader.cmake  AutoutilsCheckLib.cmake  AutoutilsCheckType.cmake  AutoutilsIncludesDefault.cmake  AutoutilsWriteToConfigHeader.cmake  CheckDecl.cmake  CheckHeader.cmake  CheckLib.cmake  CheckType.cmake  Config.cmake.in  IncludesDefault.cmake
